# panza.nvim

./: .gitignore  README.md
agent/: .gitignore  deps.py  main.py  pyproject.toml  requirements.txt
lua/: chat.lua  dependencies.lua  messenger.lua  panza.lua  test.lua  window.lua
