[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "blobfile>=3.0.0",
    "huggingface-hub>=0.34.2",
    "logging>=0.4.9.6",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
]
